--- a/sourse/pug/pages/01-entrance-d.pug
+++ b/sourse/pug/pages/01-entrance-d.pug
@@ -57,7 +57,7 @@ block pagecontent
 						+workStatus('Затирка', '22%', '#E94410')
 					.col-sm-6.col-lg-4.col-xl-3
 						+workStatus('Плинтус', '22%', '#8B9298')
-		+sMainInfo
+		+sMainInfo('', '', true)
 			tr
 				td(colspan='9').add-more
 					+e.add-new(href='#')
