--- a/sourse/pug/pages/02-edit-room.pug
+++ b/sourse/pug/pages/02-edit-room.pug
@@ -50,7 +50,7 @@ block pagecontent
 									span.col Площадь пола
 									span.col-auto 322
 								+e.edit(href='./react-planner/demo/dist/index.html' target='_blank')
-									| Редактировать
+									| Редактировать чертеж
 									+icon('edit')
 		.close-btn: +icon('close')
       
