--- a/sourse/pug/blocks/sCreateObject/_sCreateObject.scss
+++ b/sourse/pug/blocks/sCreateObject/_sCreateObject.scss
@@ -18,6 +18,7 @@
 	}
 	@include media-breakpoint-down(md) {
 		min-height: 100vh;
+		padding-bottom: rem(165);
 	}
 	&__body {
 		display: flex;
@@ -88,6 +89,14 @@
 		box-shadow: 0 -5px 5px 0 rgba(0, 0, 0, 0.05);
 		@include media-breakpoint-up(md) {
 			padding: rem(24) rem(48);
+		}
+		@include media-breakpoint-down(md) {
+			position: fixed;
+			width: 100%;
+			left: 0;
+			bottom: 0;
+			z-index: 100;
+			background-color: #fff;
 		}
 	}
 	&__footer-row {
@@ -265,7 +274,7 @@
 			font-style: italic;
 			color: $gray-600;
 			margin-left: auto;
-			margin-top: rem(12);
+			margin-bottom: rem(12);
 			font-size: rem(14);
 			@include media-breakpoint-up(md) {
 				flex-direction: row;
@@ -282,6 +291,29 @@
 					margin-right: 0;
 					margin-left: rem(12);
 				}
+			}
+		}
+	}
+	.select-status {
+		.select2-container.select2-container--default.select2-container--open {
+			@include media-breakpoint-down(md) {
+				width: calc(100vw - 1.5rem)!important;
+				max-width: none;
+			}
+		}
+		.select2-container.select2-container--default.select2-container--open .select2-dropdown {
+			@include media-breakpoint-down(md) {
+				width: 100%!important;
+			}
+		}
+		.select2-dropdown--below {
+			@include media-breakpoint-down(md) {
+				left: 0!important;
+			}
+		}
+		.select2.select2-container.select2-container--default.select2-container--below.select2-container--open.select2-container--focus {
+			@include media-breakpoint-down(md) {
+				width: max-content !important;
 			}
 		}
 	}
