--- a/sourse/pug/blocks/sMainInfo/_sMainInfo.pug
+++ b/sourse/pug/blocks/sMainInfo/_sMainInfo.pug
@@ -1,4 +1,4 @@
-mixin sMainInfo(selects, secondTable)
+mixin sMainInfo(selects, secondTable, tile)
 	// start sMainInfo
 	+b.sMainInfo.section#sMainInfo&attributes(attributes)
 		.container-fluid
@@ -6,6 +6,9 @@ mixin sMainInfo(selects, secondTable)
 				+toggleBlock()
 					.swiper-slide
 						+toggleBtn('list', `Список`).active
+					if tile
+						.swiper-slide
+							+toggleBtn('tile', `Шахматка`)
 					.swiper-slide
 						+toggleBtn('tasks', `Задачи`)
 					.swiper-slide
@@ -259,7 +262,8 @@ mixin sMainInfo5(data)
 					+e.head
 						.row(style="--bs-gutter-x:12px")
 							.col-auto
-								.avatar-block.avatar-block--sm(style="background: #467CF4; color: #fff") МИ
+								.avatar-block.avatar-block--sm(style="background: #467CF4; color: #fff") 
+									span МИ
 							.col
 								+e.input-wrap
 									textarea.form-control(placeholder="Написать заметку")
@@ -267,11 +271,24 @@ mixin sMainInfo5(data)
 										+icon("submit")
 								+add-file()
 					+e.body
-						- for (var x = 0; x < 3; x++)
+						+e.item
+							.row.align-items-center(style="--bs-gutter-x:12px").mb-3
+								.col-auto
+									.avatar-block.avatar-block--sm(style="background: #467CF4; color: #fff") 
+										span АИ
+										+img('img/avatar.jpg') 
+								.col
+									strong.me-2 Антон Иванов
+									span.text-secondary 23 дек 23, 18:59
+							+e.content
+								p Давно выяснено, что при оценке дизайна и композиции читаемый текст мешает сосредоточиться. Lorem Ipsum используют потому, что тот обеспечивает более или менее стандартное заполнение шаблона.
+								+file-item('Сметная документация.xlsx','14 мб','false', 'f')
+						- for (var x = 0; x < 2; x++)
 							+e.item
 								.row.align-items-center(style="--bs-gutter-x:12px").mb-3
 									.col-auto
-										.avatar-block.avatar-block--sm(style="background: #467CF4; color: #fff") АИ
+										.avatar-block.avatar-block--sm(style="background: #467CF4; color: #fff") 
+											span АИ
 									.col
 										strong.me-2 Антон Иванов
 										span.text-secondary 23 дек 23, 18:59
