--- a/sourse/pug/pages/02-create-object-d.pug
+++ b/sourse/pug/pages/02-create-object-d.pug
@@ -19,7 +19,9 @@ block pagecontent
 	//- +mob-mnu()
 	main
 		+sCreateObject({
-			status: true,
+			status: {
+				title: 'Статус проекта',
+			},
 			startDate: true,
 			endDate: true,
 			author: true
