--- a/sourse/pug/pages/02-create-task-d.pug
+++ b/sourse/pug/pages/02-create-task-d.pug
@@ -21,7 +21,8 @@ block pagecontent
 		+sCreateObject({
 			workers: true,
 			status: {
-				title: 'Создание задачи'
+				title: 'Создание задачи',
+				def: false
 			},
 			startDate: true,
 			endDate: true,
