--- a/sourse/pug/pages/02-edit-task-d.pug
+++ b/sourse/pug/pages/02-edit-task-d.pug
@@ -20,7 +20,8 @@ block pagecontent
 	main
 		+sCreateObject({
 			status: {
-				title: 'Статус задачи'
+				title: 'Статус задачи',
+				def: false,
 			},
 			workers: true,
 			startDate: true,
