--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -308,9 +308,22 @@
 		display: flex;
 		@include media-breakpoint-down(md) {
 			justify-content: center;
+			flex-direction: column;
+			align-items: center;
 		}
 		@include media-breakpoint-up(md) {
 			align-items: center;
+		}
+		&--title {
+			.task-stat {
+				@include media-breakpoint-down(md) {
+					margin-bottom: 24px;
+					margin-top: 18px;
+				}
+				@include media-breakpoint-up(md) {
+					margin-left: rem(18);
+				}
+			}
 		}
 	}
 	.freeMode-slider--js {
@@ -1350,9 +1363,11 @@
 }
 
 .main-table {
-	overflow-x: auto;
-	overflow-y: hidden;
 	background-color: #fff;
+	@include media-breakpoint-down(xl) {
+		overflow-x: auto;
+		overflow-y: hidden;
+	}
 	& > table {
 		& > tbody {
 			& > tr {
@@ -1403,6 +1418,11 @@
 					& > td[colspan='9'] {
 						// border-bottom: 1px solid $gray-200;
 					}
+				}
+			}
+			&.activeCheckbox {
+				& > td {
+					background-color: $gray-400;
 				}
 			}
 			&.checked {
@@ -1732,12 +1752,58 @@
 						padding-right: rem(12);
 					}
 				}
+				@include media-breakpoint-up(md) {
+					padding: rem(15) rem(12) rem(15);
+				}
 				.icon {
 					font-size: rem(20);
 					margin-right: rem(12);
 				}
 				&[colspan="5"] {
 					border-bottom: none;
+				}
+				.main-table__more-info {
+					@include mt;
+					color: $gray-600;
+					&:hover {
+						color: $accent;
+					}
+					.icon {
+						font-size: rem(24);
+					}
+					.tooltip {
+						--bs-tooltip-max-width: #{rem(456)};
+						@include media-breakpoint-down(sm) {
+							width: calc(100vw - rem(24));
+							left: rem(12) !important;
+						}
+					}
+				}
+			}
+		}
+	}
+	&--object {
+		table {
+			th {
+				&:nth-child(1) {
+					min-width: rem(350);
+					@include media-breakpoint-up(md) {
+						min-width: rem(433);
+					}
+				}
+				&:nth-child(2) {
+					width: rem(238);
+				}
+				&:nth-child(3) {
+				}
+				&:nth-child(4) {
+
+				}
+				&:nth-child(5) {
+					width: rem(144);
+				}
+				&:nth-child(6) {
+					width: rem(240);
 				}
 			}
 		}
