--- a/sourse/pug/pages/03-task-d.pug
+++ b/sourse/pug/pages/03-task-d.pug
@@ -10,7 +10,7 @@ include ../blocks/sObjectDetails/_sObjectDetails.pug
 include ../blocks/sMainInfo/_sMainInfo.pug
 
 block variables
-	- let  mainPage= 'room-page page-with-control-bar' 
+	- let  mainPage= 'page-with-control-bar' 
 	- let  bg= '01-3-house.jpg'
 
 block title
