--- a/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
+++ b/sourse/pug/blocks/mixin-wrap/_mixin-wrap.scss
@@ -317,7 +317,6 @@
 		&--title {
 			.task-stat {
 				@include media-breakpoint-down(md) {
-					margin-bottom: 24px;
 					margin-top: 18px;
 				}
 				@include media-breakpoint-up(md) {
@@ -1699,6 +1698,16 @@
 			margin-right: rem(6);
 		}
 	}
+	&__members {
+		display: flex;
+		align-items: center;
+		img {
+			flex: 0 0 auto;
+			width: 100%;
+			max-width: rem(20);
+			margin-right: rem(6);
+		}
+	}
 	&--2 {
 		table {
 			min-width: rem(900);
@@ -1759,7 +1768,7 @@
 					font-size: rem(20);
 					margin-right: rem(12);
 				}
-				&[colspan="5"] {
+				&[colspan] {
 					border-bottom: none;
 				}
 				.main-table__more-info {
@@ -1804,6 +1813,35 @@
 				}
 				&:nth-child(6) {
 					width: rem(240);
+				}
+			}
+		}
+	}
+	&--teams {
+		table {
+			tr {
+				th {
+					&:nth-child(1) {
+						min-width: rem(215);
+						width: rem(363);
+						@include media-breakpoint-up(md) {
+							min-width: auto;
+						}
+						@include media-breakpoint-up(xxl) {
+							min-width: auto;
+						}
+					}
+					&:nth-child(2) {
+						min-width: rem(290);
+						width: auto;
+					}
+					&:nth-child(3) {
+						min-width: 110px;
+						width: rem(152);
+					}
+					&:nth-child(4) {
+						width: rem(170);
+					}
 				}
 			}
 		}
