--- a/sourse/pug/blocks/form-wrap/form-wrap.scss
+++ b/sourse/pug/blocks/form-wrap/form-wrap.scss
@@ -1,4 +1,10 @@
 .form-wrap{
+	&__row {
+		--bs-gutter-y: #{rem(12)};
+		@include media-breakpoint-up(md) {
+			--bs-gutter-y: #{rem(18)};
+		}
+	}
  	label{
  		width: 100%;
  		display: block;
@@ -6,6 +12,21 @@
 
 	label {
 		width: 100%;
+	}
+	&__pass-eye {
+		@include mt;
+		position: absolute;
+		top: 50%;
+		transform: translateY(-50%);
+		right: rem(18);
+		color: $gray-600;
+		cursor: pointer;
+		.icon {
+			font-size: rem(20);
+		}
+		&:hover, &.active {
+			color: $yellow;
+		}
 	}
 	&__input-wrap {
 		width: 100%;
