--- a/sourse/pug/blocks/modal/_modal.pug
+++ b/sourse/pug/blocks/modal/_modal.pug
@@ -1,16 +1,31 @@
 
 mixin modal() 
 	//  start modals
-	div(id="modal-call"  style="display: none" )
+	div(id="modal-delete"  style="display: none" )
 		+b.modal-win
-			+form-wrap
-				.text-center
-					+e.title.form-data.h3.ttu Обратный звонок
-					p.after-headline Заполните заявку и&nbsp;мы&nbsp;с&nbsp;Вами свяжемся в&nbsp;течение 15&nbsp;минут
+			.h4 Вы действительно хотите удалить?
+			p Это действие будет выполнено безвозвратно.
+			.row
+				.col-md: +e.btn.btn.btn-accent(href='#') Отмена
+				.col-md: +e.btn.btn.btn-light(href='#') Удалить
 
-				+input("Ваше Имя")(required)  
-				+e.BUTTON.btn.btn(type="submit"  )  
-				+policy()
-	// #modal-call
+	// #modal-delete
+
+	div(id="modal-dublicate"  style="display: none" )
+		+b.modal-win
+			.h4 Подтвердите дубликат
+			p Выберите вложенные разделы которые также нужно дублировать.
+			+e.inputs-row.row
+				.col-6: +in-c('checkbox', 'Дома', 'dublicate')
+				.col-6: +in-c('checkbox', 'Квартиры', 'dublicate')
+				.col-6: +in-c('checkbox', 'Подъезды', 'dublicate')
+				.col-6: +in-c('checkbox', 'Помещения', 'dublicate')
+				.col-6: +in-c('checkbox', 'Этажи', 'dublicate')
+				.col-6: +in-c('checkbox', 'Задачи', 'dublicate')
+			.row
+				.col-md: +e.btn.btn.btn-accent(href='#') Отмена
+				.col-md: +e.btn.btn.btn-light(href='#') Удалить
+
+	// #modal-dublicate
 	
 	// end modals
