--- a/sourse/pug/pages/00-modal.pug
+++ b/sourse/pug/pages/00-modal.pug
@@ -21,5 +21,6 @@ block pagecontent
 				mixin btn(id, name)
 					.col-auto.mb-2
 						button.btn.btn-primary(data-src=id data-fancybox).btn-modal-js= name
-				+btn("#modal-call", "modal-call")
+				+btn("#modal-delete", "modal-delete")
+				+btn("#modal-dublicate", "modal-dublicate")
 	+parts('footer')
